added description for timeless tones

--- a/generic.html
+++ b/generic.html
@@ -79,8 +79,17 @@
 										<div class="inner">
 											<header class="major">
 												<h3>Description</h3>
+												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" class="devicon"/>
+												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" class="devicon" />
+												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" class="devicon"/>
+												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" class="devicon"/>
+												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" class="devicon"/>
+												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" class="devicon"/>
+												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/npm/npm-original-wordmark.svg" class="devicon"/>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>
+												For guitar aficionados, collectors, and nostalgic musicians, Timeless Tones was created to simplify the process of finding vintage instruments.
+												The react-powered front-end enables seamless interactivity and dynamic content updates that enhance the user experience.											</p>
 											<ul class="actions">
 												<li><a href="https://github.com/sinninga/ecommerce" target="_blank" class="button">View Code</a></li>
 											</ul>
