--- a/elements.html
+++ b/elements.html
@@ -68,14 +68,22 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="https://sinninga.github.io/glass-website" target="_blank" class="image">
-										<img src="images/glass.png" class="site-img" alt="" data-position="center center" />
+										<img src="images/glass.png" class="site-img2" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
 												<h3>Description</h3>
+												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" class="devicon"/>
+												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" class="devicon" />
+												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" class="devicon"/>
+												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" class="devicon"/>
+												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/npm/npm-original-wordmark.svg" class="devicon"/>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>
+												Icy Excursions is an innovative web design that reimagines the travel experience through a visually captivating dashboard.
+												A clean and organized layout prioritizes ease of use and navigation is a breeze due to the intuitive and user-friendly interface.
+											</p>
 											<ul class="actions">
 												<li><a href="https://github.com/sinninga/glass-website" target="_blank" class="button">View Code</a></li>
 											</ul>
