--- a/index.html
+++ b/index.html
@@ -179,6 +179,16 @@
 						<div class="inner">
 							<ul class="copyright">
 								<li>2023</li><li>Adam Sinning</li>
+								<li>
+								<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" class="devicon"/>
+								<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" class="devicon" />
+								<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" class="devicon"/>
+								<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" class="devicon"/>
+								<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" class="devicon"/>
+								<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" class="devicon"/>
+								<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/npm/npm-original-wordmark.svg" class="devicon"/>
+								<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg" class="devicon"/>
+								</li>
 							</ul>
 						</div>
 					</footer>
