added description to explorer

--- a/explore.html
+++ b/explore.html
@@ -74,8 +74,15 @@
 										<div class="inner">
 											<header class="major">
 												<h3>Description</h3>
+												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" class="devicon"/>
+												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" class="devicon" />
+												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" class="devicon"/>
+												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" class="devicon"/>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>
+												This visually stunning theme comes to life with interactive JavaScript animations which enhance the narrative and create a sense of exploration as you navigate.
+												As you scroll, the layers of immersive visuals create a sense of depth, inviting you to embark on a virtual journey through the eyes of the traveler.
+											</p>
 											<ul class="actions">
 												<li><a href="https://github.com/sinninga/parallax-website" target="_blank" class="button">View Code</a></li>
 											</ul>
