--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 									<header class="major">
 										<h2>About Me</h2>
 									</header>
-									<p>I'm a full-stack developer from Loveland, Colorado, educated at the University of Colorado and LeWagon Coding Bootcamp. I specialize in crafting visually captivating websites using HTML, CSS, JavaScript, and React, while also integrating back-end functionalities through RESTful APIs and working with SQL/NoSQL databases like PostgreSQL and MongoDB. Beyond coding, I'm an avid guitar player, Spanish language learner, scuba diver, and spicy food enthusiast, blending my diverse interests into creating immersive web experiences.</p>
+									<p>I'm a full-stack developer from Loveland, Colorado, educated at the University of Colorado and LeWagon Coding Bootcamp. I specialize in crafting visually captivating websites using HTML, CSS, JavaScript, and React, while also integrating back-end functionalities through RESTful APIs and working with SQL/NoSQL databases like PostgreSQL and MongoDB. My version control experience on GitHub allows me to seamlessly work alongside fellow developers, contributing to projects, tracking changes, and ensuring a smooth process of collaboration. Beyond coding, I'm an avid guitar player, Spanish language learner, scuba diver, and spicy food enthusiast, blending my diverse interests into creating immersive web experiences.</p>
 									<ul class="actions">
 										<li><a href="landing.html" class="button next">Get Started</a></li>
 									</ul>
@@ -186,7 +186,6 @@
 								<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" class="devicon"/>
 								<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" class="devicon"/>
 								<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" class="devicon"/>
-								<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/npm/npm-original-wordmark.svg" class="devicon"/>
 								<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg" class="devicon"/>
 								</li>
 							</ul>
