--- a/landing.html
+++ b/landing.html
@@ -80,11 +80,10 @@
 												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" class="devicon"/>
 												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" class="devicon"/>
 												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" class="devicon"/>
-												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/npm/npm-original-wordmark.svg" class="devicon"/>
 											</header>
 											<p>
 												The Hot Tamale was born out of a desire to connect like-minded spice enthusiasts with their favorite flavors while also demonstrating my skills in front-end development, API integration, and creating user-friendly interfaces.
-												I use this app often in my hometown of Loveland, CO and have discovered my favorite Mexican (El Cielo), Indian (Durbar Bistro) and Thai (Bai-Tong) restaurants. Try it yourself!
+												I use this app often in my hometown of Loveland, CO and it helped me discover my favorite Mexican (El Cielo), Indian (Durbar Bistro) and Thai (Bai-Tong) restaurants. Try it yourself!
 											</p>
 											<ul class="actions">
 												<li><a href="https://github.com/sinninga/spice" target="_blank" class="button">View Code</a></li>
