--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 							<li><a href="generic.html">Timeless Tones</a></li>
 							<li><a href="elements.html">Icy Excursions</a></li>
 							<li><a href="explore.html">Explorology</a></li>
+							<li><a href="#two" class="scrolly">About Me</a></li>
 						</ul>
 					</nav>
 
