--- a/explore.html
+++ b/explore.html
@@ -127,7 +127,7 @@
 								<section>
 									<div class="contact-method">
 										<span class="icon brands alt fa-github"></span>
-										<h3>Github</h3>
+										<h3>GitHub</h3>
 										<a href="https://github.com/sinninga" target="_blank">https://github.com/sinninga</a>
 									</div>
 								</section>
