added link to hot tamale

--- a/landing.html
+++ b/landing.html
@@ -83,7 +83,7 @@
 											</header>
 											<p>
 												The Hot Tamale was born out of a desire to connect like-minded spice enthusiasts with their favorite flavors while also demonstrating my skills in front-end development, API integration, and creating user-friendly interfaces.
-												I use this app often in my hometown of Loveland, CO and it helped me discover my favorite Mexican (El Cielo), Indian (Durbar Bistro) and Thai (Bai-Tong) restaurants. Try it yourself!
+												I use this app often in my hometown of Loveland, CO and it helped me discover my favorite Mexican (El Cielo), Indian (Durbar Bistro) and Thai (Bai-Tong) restaurants. <a href="https://sinninga.github.io/spice" target="_blank">Try it yourself!</a>
 											</p>
 											<ul class="actions">
 												<li><a href="https://github.com/sinninga/spice" target="_blank" class="button">View Code</a></li>
