--- a/generic.html
+++ b/generic.html
@@ -112,7 +112,7 @@
 										</div>
 									</div>
 									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
+										<!-- <li><input type="submit" value="Send Message" class="primary" /></li> -->
 										<li><input type="reset" value="Clear" /></li>
 									</ul>
 								</form>
