portfolio updated with slingo project

--- a/elements.html
+++ b/elements.html
@@ -26,9 +26,9 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="landing.html">The Hot Tamale</a></li>
-							<li><a href="generic.html">Timeless Tones</a></li>
+							<li><a href="generic.html">Slingo</a></li>
 							<li><a href="elements.html">Icy Excursions</a></li>
-							<li><a href="explore.html">Explorology</a></li>
+							<li><a href="explore.html">Timeless Tones</a></li>
 						</ul>
 					</nav>
 
