--- a/explore.html
+++ b/explore.html
@@ -26,27 +26,27 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="landing.html">The Hot Tamale</a></li>
-							<li><a href="generic.html">Timeless Tones</a></li>
+							<li><a href="generic.html">Slingo</a></li>
 							<li><a href="elements.html">Icy Excursions</a></li>
-							<li><a href="explore.html">Explorology</a></li>
+							<li><a href="explore.html">Timeless Tones</a></li>
 						</ul>
 					</nav>
 
 				<!-- Banner -->
 				<!-- Note: The "styleN" class below should match that of the header element. -->
-					<section id="banner" class="style1">
+					<section id="banner" class="style6">
 						<div class="inner">
 							<span class="image">
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Explorology</h1>
+								<h1>Timeless Tones</h1>
 							</header>
 							<div class="content">
-								<p>Explore enchanting travel tales and embark on a visual journey with seamless animations and a unique parallax homepage</p>
+								<p>Your gateway to vintage vibes - explore our curated collection of retro electric guitars, where every instrument has a story to tell and a melody to revive</p>
 							</div>
 							<ul class="actions">
-								<li><a href="https://sinninga.github.io/parallax-website" target="_blank" class="button">View Website</a></li>
+								<li><a href="https://sinninga.github.io/ecommerce" target="_blank" class="button">View Website</a></li>
 							</ul>
 						</div>
 					</section>
@@ -67,8 +67,8 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="https://sinninga.github.io/parallax-website" target="_blank" class="image">
-										<img src="images/explore.png" class="site-img" alt="" data-position="center center" />
+									<a href="https://sinninga.github.io/ecommerce" target="_blank" class="image">
+										<img src="images/guitars.png" class="site-img" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -77,14 +77,15 @@
 												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" class="devicon"/>
 												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" class="devicon" />
 												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" class="devicon"/>
+												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" class="devicon"/>
+												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" class="devicon"/>
 												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" class="devicon"/>
 											</header>
 											<p>
-												This visually stunning theme comes to life with interactive JavaScript animations which enhance the narrative and create a sense of exploration as you navigate.
-												As you scroll, the layers of immersive visuals create a sense of depth, inviting you to embark on a virtual journey through the eyes of the traveler.
-											</p>
+												For guitar aficionados, collectors, and nostalgic musicians, Timeless Tones was created to simplify the process of finding vintage instruments.
+												The react-powered front-end enables seamless interactivity and dynamic content updates that enhance the user experience.											</p>
 											<ul class="actions">
-												<li><a href="https://github.com/sinninga/parallax-website" target="_blank" class="button">View Code</a></li>
+												<li><a href="https://github.com/sinninga/ecommerce" target="_blank" class="button">View Code</a></li>
 											</ul>
 										</div>
 									</div>
