--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="landing.html">The Hot Tamale</a></li>
-							<li><a href="generic.html">Timeless Tones</a></li>
+							<li><a href="generic.html">Slingo</a></li>
 							<li><a href="elements.html">Icy Excursions</a></li>
-							<li><a href="explore.html">Explorology</a></li>
+							<li><a href="explore.html">Timeless Tones</a></li>
 							<li><a href="#two" class="scrolly">About Me</a></li>
 						</ul>
 					</nav>
@@ -64,11 +64,11 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/guitars.png" alt="" />
+										<img src="images/slingo.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="generic.html" class="link">Timeless Tones</a></h3>
-										<p>Revive the Retro Sounds</p>
+										<h3><a href="generic.html" class="link">Slingo</a></h3>
+										<p>Language Learning with Lyrics</p>
 									</header>
 								</article>
 								<article>
@@ -82,11 +82,11 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/explore.png" alt="" />
+										<img src="images/guitars.png" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="explore.html" class="link">Explorology</a></h3>
-										<p>Cherish the Moments that Matter</p>
+										<h3><a href="explore.html" class="link">Timeless Tones</a></h3>
+										<p>Revive the Retro Sounds</p>
 									</header>
 								</article>
 								<!-- <article>
