--- a/generic.html
+++ b/generic.html
@@ -26,9 +26,9 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="landing.html">The Hot Tamale</a></li>
-							<li><a href="generic.html">Timeless Tones</a></li>
+							<li><a href="generic.html">Slingo</a></li>
 							<li><a href="elements.html">Icy Excursions</a></li>
-							<li><a href="explore.html">Explorology</a></li>
+							<li><a href="explore.html">Timeless Tones</a></li>
 						</ul>
 					</nav>
 
@@ -40,13 +40,13 @@
 								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Timeless Tones</h1>
+								<h1>Slingo</h1>
 							</header>
 							<div class="content">
-								<p>Your gateway to vintage vibes - explore our curated collection of retro electric guitars, where every instrument has a story to tell and a melody to revive</p>
+								<p>Learn a new language with song lyrics - Your Soundtrack to Fluency</p>
 							</div>
 							<ul class="actions">
-								<li><a href="https://sinninga.github.io/ecommerce" target="_blank" class="button">View Website</a></li>
+								<li><a href="https://sinninga.github.io/singo" target="_blank" class="button">View Website</a></li>
 							</ul>
 						</div>
 					</section>
@@ -67,8 +67,8 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="https://sinninga.github.io/ecommerce" target="_blank" class="image">
-										<img src="images/guitars.png" class="site-img" alt="" data-position="center center" />
+									<a href="https://sinninga.github.io/singo" target="_blank" class="image">
+										<img src="images/slingo.png" class="site-img" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
@@ -82,10 +82,12 @@
 												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" class="devicon"/>
 											</header>
 											<p>
-												For guitar aficionados, collectors, and nostalgic musicians, Timeless Tones was created to simplify the process of finding vintage instruments.
-												The react-powered front-end enables seamless interactivity and dynamic content updates that enhance the user experience.											</p>
+												A language learning app that integrates with Spotify SDK to provide access to any song. 
+												Slingo synchronizes lyrics in real-time with the music, creating an engaging way to follow along with your favorite songs. 
+												It incorporates the power of Deepl API to provide instant translations, allowing users to understand the music in up to 10 different languages.
+											</p>
 											<ul class="actions">
-												<li><a href="https://github.com/sinninga/ecommerce" target="_blank" class="button">View Code</a></li>
+												<li><a href="https://github.com/sinninga/singo" target="_blank" class="button">View Code</a></li>
 											</ul>
 										</div>
 									</div>
