index tagline update

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hi, I'm Adam and I want to work for FluentU!</h1>
+								<h1>I'm Adam and I want to be a part of FluentU!</h1>
 							</header>
 							<div class="content">
 								<p>Combining my love for language learning with my skills in web development, I'm creating innovative tools that bridge the gap between these two passions</p>
