--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>I'm Adam and I want to be a part of FluentU!</h1>
+								<h1>Hi, I'm Adam and I build what I want!</h1>
 							</header>
 							<div class="content">
-								<p>Combining my love for language learning with my skills in web development, I'm creating innovative tools that bridge the gap between these two passions</p>
+								<p>Crafting innovative tools and devising solutions to real-world challenges, I specialize in using front-end technologies to deliver engaging user experiences</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">My Projects</a></li>
 								</ul>
