links updated for hot tamale project on vercel

--- a/landing.html
+++ b/landing.html
@@ -46,7 +46,7 @@
 								<p>Discover a world of fiery flavors and reward your adventurous taste buds. Find sizzling hotspots serving the spiciest culinary delights near you, conveniently displayed on an interactive map</p>
 							</div>
 							<ul class="actions">
-								<li><a href="https://sinninga.github.io/spice" target="_blank" class="button">View Website</a></li>
+								<li><a href="https://spice-five.vercel.app/" target="_blank" class="button">View Website</a></li>
 							</ul>
 						</div>
 					</section>
@@ -67,7 +67,7 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="https://sinninga.github.io/spice" target="_blank" class="image">
+									<a href="https://spice-five.vercel.app/" target="_blank" class="image">
 										<img src="images/spice.png" class="site-img2" alt="" data-position="center center" />
 									</a>
 									<div class="content">
@@ -83,7 +83,7 @@
 											</header>
 											<p>
 												The Hot Tamale was born out of a desire to connect like-minded spice enthusiasts with their favorite flavors while also demonstrating my skills in front-end development, API integration, and creating user-friendly interfaces.
-												I use this app often in my hometown of Loveland, CO and it helped me discover my favorite Mexican (El Cielo), Indian (Durbar Bistro) and Thai (Bai-Tong) restaurants. <a href="https://sinninga.github.io/spice" target="_blank">Try it yourself!</a>
+												I use this app often in my hometown of Loveland, CO and it helped me discover my favorite Mexican (El Cielo), Indian (Durbar Bistro) and Thai (Bai-Tong) restaurants. <a href="https://spice-five.vercel.app/" target="_blank">Try it yourself!</a>
 											</p>
 											<ul class="actions">
 												<li><a href="https://github.com/sinninga/spice" target="_blank" class="button">View Code</a></li>
