changed portfolio intro

--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hi, I'm Adam and I build what I want!</h1>
+								<h1>Hi, I'm Adam - let me introduce myself!</h1>
 							</header>
 							<div class="content">
-								<p>Crafting innovative tools and devising solutions to real-world challenges, I specialize in using front-end technologies to deliver engaging user experiences</p>
+								<p>I'm a web developer creating innovative tools that merge with my diverse interests. Get to know me better with these four projects.</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">My Projects</a></li>
 								</ul>
