--- a/landing.html
+++ b/landing.html
@@ -82,7 +82,7 @@
 												<img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" class="devicon"/>
 											</header>
 											<p>
-												The Hot Tamale was born out of a desire to connect like-minded spice enthusiasts with their favorite flavors while also demonstrating skills in front-end development, API integration, and creating user-friendly interfaces.
+												The Hot Tamale was born out of a desire to connect like-minded spice enthusiasts with their favorite flavors while also demonstrating my skills in front-end development, API integration, and creating user-friendly interfaces.
 												I use this app often in my hometown of Loveland, CO and it helped me discover my favorite Mexican (El Cielo), Indian (Durbar Bistro) and Thai (Bai-Tong) restaurants. <a href="https://spice-five.vercel.app/" target="_blank">Try it yourself!</a>
 											</p>
 											<ul class="actions">
