slingo url update

--- a/generic.html
+++ b/generic.html
@@ -46,7 +46,7 @@
 								<p>Learn a new language with song lyrics - Your Soundtrack to Fluency</p>
 							</div>
 							<ul class="actions">
-								<li><a href="https://slingo.vercel.app" target="_blank" class="button">View Website</a></li>
+								<li><a href="https://slingotest.vercel.app" target="_blank" class="button">View Website</a></li>
 							</ul>
 						</div>
 					</section>
@@ -67,7 +67,7 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="https://slingo.vercel.app" target="_blank" class="image">
+									<a href="https://slingotest.vercel.app" target="_blank" class="image">
 										<img src="images/slingo.png" class="site-img" alt="" data-position="center center" />
 									</a>
 									<div class="content">
