portfolio about me update

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 									<header class="major">
 										<h2>About Me</h2>
 									</header>
-									<p>I'm a full-stack developer from Loveland, Colorado, educated at the University of Colorado and LeWagon Coding Boot Camp. I specialize in crafting visually captivating websites using HTML, CSS, JavaScript, and React, while integrating back-end functionalities through RESTful APIs and working with SQL/NoSQL databases like PostgreSQL and MongoDB. My version control experience on GitHub allows me to seamlessly work alongside fellow developers, contributing to projects, tracking changes, and ensuring a smooth process of collaboration. Beyond coding, I'm an avid guitar player, Spanish language learner, scuba diver, and spicy food enthusiast, blending my diverse interests into creating immersive web experiences.</p>
+									<p>I'm a full-stack developer from Loveland, Colorado, educated at the University of Colorado. I specialize in crafting visually captivating websites using HTML, CSS, JavaScript, and React, while integrating back-end functionalities through RESTful APIs and working with SQL/NoSQL databases like MySQL, PostgreSQL and MongoDB. My version control experience on GitHub allows me to seamlessly work alongside fellow developers, contributing to projects, tracking changes, and ensuring a smooth process of collaboration. Beyond coding, I'm an avid guitar player, Spanish language learner, scuba diver, and spicy food enthusiast, blending my diverse interests into creating immersive web experiences.</p>
 									<ul class="actions">
 										<li><a href="landing.html" class="button next">Get Started</a></li>
 									</ul>
